[project]
name = "rag-webscrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "requests>=2.32.3",
]
